# ChangeLog for www-apps/rt
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/rt/ChangeLog,v 1.20 2005/08/24 20:16:00 rl03 Exp $

  24 Aug 2005; Renat Lumpau <rl03@gentoo.org> rt-3.2.1.ebuild,
  rt-3.4.2-r1.ebuild, rt-3.4.3.ebuild:
  Fix dependency checking code wrt bug #103481

  23 Aug 2005; Renat Lumpau <rl03@gentoo.org> rt-3.4.3.ebuild:
  Fix enewuser invocation wrt bug #103421

*rt-3.4.3 (11 Aug 2005)

  11 Aug 2005; Renat Lumpau <rl03@gentoo.org> +rt-3.4.3.ebuild:
  Version bump

  08 Aug 2005; Renat Lumpau <rl03@gentoo.org> rt-3.4.2-r1.ebuild:
  Fixed HTML-Mason dependency

  08 Aug 2005; Renat Lumpau <rl03@gentoo.org> files/3.4.2/reconfig,
  rt-3.4.2-r1.ebuild:
  Fixed libapreq2/mod_perl2 dependency wrt bug #67686, bug #61893, bug #73115.

  04 Aug 2005; Michael Cummings <mcummings@gentoo.org> rt-3.4.2-r1.ebuild:
  Corrected Apache-Test dep since mod_perl-2 blocks it - made it an ||

  02 Aug 2005; Renat Lumpau <rl03@gentoo.org> files/3.4.2/reconfig:
  added die()

  29 Jul 2005; Renat Lumpau <rl03@gentoo.org>
  files/3.4.2/postinstall-en.txt, files/3.4.2/reconfig, -rt-3.4.2.ebuild,
  rt-3.4.2-r1.ebuild:
  Finally fixed variables in the hook script. Fixes #99853.

  21 Jun 2005; Renat Lumpau <rl03@gentoo.org> files/3.4.2/rt.init.d:
  Fixed initscript.

*rt-3.4.2-r1 (21 Jun 2005)

  21 Jun 2005; Renat Lumpau <rl03@gentoo.org> +files/3.2.1/reconfig,
  +files/3.4.2/config.layout-gentoo, -files/reconfig-3.4.2,
  +files/3.4.2/postinstall-en.txt, +files/3.2.1/postinstall-en.txt,
  +files/3.4.2/reconfig, -files/postinstall-en-3.4.2.txt,
  +files/3.4.2/rt.conf.d, +files/3.4.2/rt.init.d,
  +files/3.4.2/rt_apache.conf, +files/3.4.2/rt_apache1_fcgi.conf,
  +files/3.4.2/rt_apache2_fcgi.conf, -files/config.layout-gentoo,
  -files/postinstall-en.txt, -files/reconfig, -files/rt_apache.conf,
  rt-3.2.1.ebuild, rt-3.4.2.ebuild, +rt-3.4.2-r1.ebuild: