@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/rt
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/rt/ChangeLog,v 1.20 2005/08/24 20:16:00 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/rt/ChangeLog,v 1.21 2005/09/11 17:49:54 rl03 Exp $
+
+  11 Sep 2005; Renat Lumpau <rl03@gentoo.org> rt-3.2.1.ebuild,
+  rt-3.4.2-r1.ebuild, rt-3.4.3.ebuild:
+  Housekeeping
 
   24 Aug 2005; Renat Lumpau <rl03@gentoo.org> rt-3.2.1.ebuild,
   rt-3.4.2-r1.ebuild, rt-3.4.3.ebuild:
